--- a/hcp/defaults/main.yml
+++ b/hcp/defaults/main.yml
@@ -16,9 +16,10 @@ domain: example.com
 
 #We need the role name set for both IAM tasks and Hosted Cluster management tasks
 iam:
-  hcp_role_name: hypershift_cli_role
-  hcp_policy_name: hypershift_cli_policy
-  hcp_users: {}
+  hcp_role_name: eduffy-hypershift_cli_role
+  hcp_policy_name: eduffy-hypershift_cli_policy
+  hcp_users:
+    - eduffy
     #- list of users to bind to IAM policy
 
 #Validated Parameters 
