--- a/vars.yml
+++ b/vars.yml
@@ -6,29 +6,17 @@ destroy: false
 create_iam: false
 
 # Base domain - constant for all clusters
-domain: aws.validatedpatterns.io
+domain: fusionaccess.devcluster.openshift.com
 
 # Clusters list - Define multiple clusters with different characteristics
 # Each cluster can have its own region, instance_type, image (version), replicas, etc.
 # Use 'count' to create multiple clusters of the same type with auto-incremented names
 # Note: domain is now defined at the top level and applies to all clusters
 clusters:
-  # Example: Create 3 clusters with names cluster1, cluster1-1, cluster1-2
-  - name: cluster1
-    count: 2  # Creates clusters cluster1, cluster1-1, cluster1-2
-    region: us-west-1
-  # If true, this will use all available availability zones in a specific region and will create the number of replicas per availability zone
-  # Example: us-west-1a, us-west-1b would have 1 replica provisioned in each availability zone
-    spread_across_availability_zones: false 
-    replicas: 1
-    instance_type: m5.2xlarge
-    image: default  # Use "default" to use hosting cluster version, or specify like "4.15.29"
-  
-  # Example: Single cluster in a single availability zone
-  - name: cluster2
+  - name: eduffy-hcpdemo
     count: 1
-    region: us-west-2
+    region: us-west-1
     spread_across_availability_zones: false
     replicas: 1
-    instance_type: m5.2xlarge
-    image: 4.18.28
+    instance_type: m5.4xlarge
+    image: default
